Setting minimum width for popovers to ensure elements in existing visualization popovers don't wrap.

--- a/app/css/style.less
+++ b/app/css/style.less
@@ -207,6 +207,7 @@ label{
         right: 0px;
         top: 35px;
         margin-top: 0;
+        min-width: 320px;
 
         background: none;
         padding: 10px;
